[package]
name = "cheesy-money"
version = "0.1.0"
description = "Cheesy Money — personal finance desktop app (Tauri v2 clean-architecture scaffold)"
authors = ["Cheesy Money"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cheesy_money_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
# Enables tauri::test (mock_builder/mock_context/noop_assets) for command-level integration tests.
tauri = { version = "2.9", features = ["test"] }

